--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: white;
+    color: black;
 }
 
 header {
@@ -43,7 +43,8 @@ h2 {
     max-width: 1000px; /* Ancho máximo */
     margin: 0 auto; /* Centrado horizontal */
     padding: 20px; /* Espacio interno */
-    background-color: white; /* Fondo */
+    background-color: white;
+    color: black;
     border-radius: 8px; /* Bordes redondeados */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra */
     box-sizing: border-box; /* Incluye padding en el tamaño */
@@ -73,4 +74,37 @@ button:hover {
     background: #be6458; /* Color más oscuro para el hover */
 }
 
+/* Estilo base del botón de alternancia */
+.theme-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    background: #cf6262;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.theme-button:hover {
+    background: #b14f4f;
+}
+
+/* Modo oscuro */
+body.dark-mode {
+    background-color: #333;
+    color: white;
+}
+
+body.dark-mode #mainContainer {
+    background-color: #444; /* Gris oscuro para el contenedor principal */
+    color: white;
+}
+
+body.dark-mode button {
+    background-color: #cf6262;
+    color: white;
+}
 
