--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,12 @@ body.dark-mode button:not(.theme-button):hover {
 body.dark-mode h2 {
     color: white; /* Texto blanco en modo oscuro */
 }
+
+body.dark-mode section {
+    margin-bottom: 40px;
+    padding: 20px;
+    background: #333;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
