--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ section {
 }
 
 h2 {
-    color: #555;
+    color: #444;
 }
 
 #mainContainer {
@@ -61,7 +61,7 @@ h2 {
 }
 
 button {
-    background: #d4d4d4; /* Color claro del botón */
+    background: #666; /* Color claro del botón */
     min-height: 40px;
     color: black; /* Texto negro */
     border: none;
