--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Estilos generales */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -25,7 +24,6 @@ main {
     padding: 20px;
 }
 
-/* Secciones */
 section {
     margin-bottom: 40px;
     padding: 20px;
@@ -40,92 +38,82 @@ h2 {
 }
 
 #mainContainer {
-    max-width: 1000px; /* Ancho máximo */
-    margin: 0 auto; /* Centrado horizontal */
-    padding: 20px; /* Espacio interno */
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
     background-color: rgb(238, 238, 238);
     color: black;
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Sombra */
-    box-sizing: border-box; /* Incluye padding en el tamaño */
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
 }
 
 #voiceContainer, #soundContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Máximo 150px por botón */
-    gap: 15px; /* Espacio entre filas y columnas */
-    justify-content: center; /* Centra las columnas dentro del contenedor */
-    align-items: center; /* Centra verticalmente los botones */
-    width: 100%; /* Asegura que el grid no se salga del contenedor */
-    box-sizing: border-box; /* Incluye padding y borde en el cálculo */
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 button {
-    background: #bbb; /* Color claro del botón */
+    background: #bbb;
     min-height: 40px;
-    color: black; /* Texto negro */
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background: #adadad; /* Color más oscuro para el hover */
+    background: #adadad;
 }
 
-/* Estilo base del botón de alternancia */
 .theme-button {
     position: absolute;
     top: 20px;
     right: 20px;
-    background: none; /* Sin fondo */
+    background: none;
     border: none;
     padding: 0;
     cursor: pointer;
 }
 
 .theme-button img {
-    width: 32px; /* Ajusta al tamaño deseado */
+    width: 32px;
     height: 32px;
-    transition: transform 0.3s; /* Animación de escala */
+    transition: transform 0.3s;
 }
 
 .theme-button img:hover {
-    transform: scale(1.1); /* Aumenta el tamaño ligeramente al pasar el ratón */
+    transform: scale(1.1);
 }
 
-
-/* Modo oscuro */
 body.dark-mode {
     background-color: #333;
-    color: rgb(238, 238, 238);;
+    color: rgb(238, 238, 238);
 }
 
 body.dark-mode #mainContainer {
-    background-color: #444; /* Gris oscuro para el contenedor principal */
-    color: rgb(238, 238, 238);;
+    background-color: #444;
+    color: rgb(238, 238, 238);
 }
 
-/* Botones en modo oscuro */
 body.dark-mode button:not(.theme-button) {
-    background: #333; /* Fondo oscuro del botón */
-    color: white; /* Texto blanco */
-}
-
-body.dark-mode button:not(.theme-button):hover {
-    background: #202020; /* Fondo más oscuro al pasar el ratón */
+    background: #333;
+    color: white;
 }
 
 body.dark-mode button:not(.theme-button):hover {
     background: #202020;
 }
 
-/* Encabezados en modo oscuro */
 body.dark-mode h2 {
-    color: white; /* Texto blanco en modo oscuro */
+    color: white;
 }
 
 body.dark-mode section {
-
     background: #555;
 }
