--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "JetBrains Mono", monospace;
     margin: 0;
     padding: 0;
     background-color: rgb(238, 238, 238);
@@ -7,11 +7,32 @@ body {
 }
 
 header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #555;
     color: rgb(238, 238, 238);
-    padding: 20px 0;
-    text-align: center;
+    padding: 0 20px; 
+    height: 100px;
+    box-sizing: border-box;
+    position: relative;
+    box-shadow: 0 0px 20px rgba(0, 0, 0, 0.5);
+    margin-bottom: 20px;
 }
+
+#headerContent {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#headerLogo {
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 40px;
+    width: auto;
+}
+
 
 footer {
     background: #333;
@@ -29,7 +50,7 @@ section {
     padding: 20px;
     background: rgb(238, 238, 238);
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 }
 
@@ -37,9 +58,18 @@ h2 {
     color: #444;
 }
 
+#layout {
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
+    padding: 20px;
+    justify-content: center;
+}
+
 #mainContainer {
     max-width: 1000px;
-    margin: 0 auto;
+    flex: 1;
+    margin: 0;
     padding: 20px;
     background-color: rgb(238, 238, 238);
     color: black;
@@ -48,7 +78,28 @@ h2 {
     box-sizing: border-box;
 }
 
-#voiceContainer, #soundContainer {
+#sideContainer {
+    max-width: 400px;
+    flex: 0 0 400px;
+    padding: 20px;
+    background-color: rgb(238, 238, 238);
+    color: black;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+}
+
+#ejemplo {
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    color: rgb(83, 83, 83);
+    box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.2);
+    background-color:  rgb(238, 238, 238);
+}
+
+#voiceContainer,
+#soundContainer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 15px;
@@ -58,23 +109,67 @@ h2 {
     box-sizing: border-box;
 }
 
-button {
-    background: #e2e2e2;
-    min-height: 40px;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.rosa {
+    color: #e67777;
+    font-weight: bold;
 }
 
-button:hover {
-    background: #adadad;
+.azul {
+    color: #77abe6;
+    font-weight: bold;
 }
+
+.gris {
+    color: #aaa;
+    font-size: small;
+}
+
+.button-30 {
+    align-items: center;
+    appearance: none;
+    background-color: #FCFCFD;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #36395A;
+    cursor: pointer;
+    display: inline-flex;
+    height: 48px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    font-size: 16px;
+}
+
+.button-30:focus {
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.button-30:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+}
+
+.button-30:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
+}
+
 
 .theme-button {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    right: 40px;
     background: none;
     border: none;
     padding: 0;
@@ -96,18 +191,23 @@ body.dark-mode {
     color: rgb(238, 238, 238);
 }
 
+body.dark-mode #ejemplo {
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    color: rgb(238, 238, 238);
+    box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.2);
+    background-color:  #333;
+}
+
 body.dark-mode #mainContainer {
     background-color: #444;
     color: rgb(238, 238, 238);
 }
 
-body.dark-mode button:not(.theme-button) {
-    background: #333;
-    color: white;
-}
-
-body.dark-mode button:not(.theme-button):hover {
-    background: #202020;
+body.dark-mode #sideContainer {
+    background-color: #444;
+    color: rgb(238, 238, 238);
 }
 
 body.dark-mode h2 {
@@ -116,4 +216,27 @@ body.dark-mode h2 {
 
 body.dark-mode section {
     background: #555;
+}
+
+body.dark-mode .button-30 {
+    background-color: #333;
+    box-shadow: rgba(16, 13, 24, 0.4) 0 2px 4px, rgba(13, 10, 19, 0.3) 0 7px 13px -3px, #262629 0 -3px 0 inset;
+    color: rgb(238, 238, 238);
+}
+
+
+body.dark-mode .button-30:focus {
+    box-shadow: #222 0 0 0 1.5px inset, rgba(16, 13, 24, 0.4) 0 2px 4px, rgba(13, 10, 19, 0.3) 0 7px 13px -3px, #222 0 -3px 0 inset;
+}
+
+
+body.dark-mode .button-30:hover {
+    box-shadow: rgba(16, 13, 24, 0.4) 0 4px 8px, rgba(13, 10, 19, 0.3) 0 7px 13px -3px, #222 0 -3px 0 inset;
+    transform: translateY(-2px);
+}
+
+
+body.dark-mode .button-30:active {
+    box-shadow: #222 0 3px 7px inset;
+    transform: translateY(2px);
 }
