--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,22 @@ h2 {
     background-color: rgb(238, 238, 238);
 }
 
+#voceslayout {
+    display: flex;
+    flex-direction: column;
+}
+
+#voiceHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#voiceHeader h2 {
+    margin: 0;
+}
+
+
 #voiceContainer,
 #soundContainer {
     display: grid;
@@ -218,6 +234,11 @@ h2 {
     font-size: small;
 }
 
+.verde {
+    font-weight: bold;
+    color: #4caf4f86;
+}
+
 .button-id {
     color: white;
     font-weight: bold;
@@ -288,6 +309,26 @@ h2 {
 .button-30:active {
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
+}
+
+
+#creditsContainer {
+    font-size: 1.2em;
+    color: #222;
+    text-align: left;
+}
+
+#creditsPercentage {
+    font-weight: bold;
+    color: #4caf4f86;
+}
+
+#creditsPercentage.low {
+    color: #f4433686;
+}
+
+#creditsPercentage.medium {
+    color: #ffc10781;
 }
 
 
